--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,15 @@
-# Logs
-logs
-*.log
+# Node modules (if any)
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Diagnostic reports
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
+# Environment variables
 .env
-.env.test
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# IDE files
-.vscode/
-.idea/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # OS generated files
 .DS_Store
@@ -67,9 +20,44 @@ node_modules/
 ehthumbs.db
 Thumbs.db
 
-# Obsidian vault
-.obsidian/
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Build output
-main.js
-*.js.map
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# API keys (security)
+api_keys.txt
+config.json
+
+# Local TTS models and cache
+models/
+cache/
+*.model
+*.tts
+
+# Audio files (except examples)
+Audio/
+audio_*.mp3
+
+# Build artifacts
+dist/
+build/
+*.zip
+*.tar.gz
+
+# Logs
+*.log
+logs/
+
+# Test files
+test/
+tests/
+__pycache__/
+*.pyc
