--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
 	"id": "llm-dictionary",
-	"name": "LLM Dictionary",
-	"version": "1.0.0",
+	"name": "LLM Dictionary - Local TTS Edition",
+	"version": "2.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "AI-powered dictionary with context-aware definitions, TTS, and Anki integration",
+	"description": "AI-powered dictionary with offline high-quality Local TTS, Vietnamese translations, and unlimited audio generation. Features automatic folder organization and real audio file embedding.",
 	"author": "MTQV002",
-	"authorUrl": "https://github.com/MTQV002",
-	"fundingUrl": "",
-	"isDesktopOnly": false
+	"authorUrl": "https://github.com/MTQV002/LLM-obsidian",
+	"fundingUrl": "https://github.com/MTQV002/LLM-obsidian",
+	"isDesktopOnly": true,
+	"main": "main.js"
 }
